--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
 </ol><h2>
 <a name="demo-tutorials" class="anchor" href="#demo-tutorials"><span class="octicon octicon-link"></span></a>Demo tutorials</h2>
 
-<p>Cube: <a href="http://jsfiddle.net/rison/ygWEW/">http://jsfiddle.net/rison/ygWEW/</a></p>
+<p>Cube: <a href="http://jsfiddle.net/nosir/ygWEW/">http://jsfiddle.net/rison/ygWEW/</a></p>
 
-<p>Pyramid : <a href="http://jsfiddle.net/rison/ZVURu/">http://jsfiddle.net/rison/ZVURu/</a></p>
+<p>Pyramid : <a href="http://jsfiddle.net/nosir/ZVURu/">http://jsfiddle.net/rison/ZVURu/</a></p>
 
-<p>Brick: <a href="http://jsfiddle.net/rison/6MuVr/">http://jsfiddle.net/rison/6MuVr/</a></p>
+<p>Brick: <a href="http://jsfiddle.net/nosir/6MuVr/">http://jsfiddle.net/rison/6MuVr/</a></p>
 
-<p>SideX &amp; SideY: <a href="http://jsfiddle.net/rison/bLsew/">http://jsfiddle.net/rison/bLsew/</a></p>
+<p>SideX &amp; SideY: <a href="http://jsfiddle.net/nosir/bLsew/">http://jsfiddle.net/rison/bLsew/</a></p>
 
 <h2>
 <a name="roadmap" class="anchor" href="#roadmap"><span class="octicon octicon-link"></span></a>Roadmap</h2>
@@ -112,6 +112,8 @@
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
+
+<a href="https://github.com/nosir/obelisk.js"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png" alt="Fork me on GitHub"></a>
 
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
