--- a/index.html
+++ b/index.html
@@ -124,6 +124,6 @@
             } catch(err) {}
           </script>
 
-
+    <a href="https://github.com/nosir/obelisk.js"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png" alt="Fork me on GitHub"></a>
   </body>
 </html>
