--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/nosir/obelisk.js">View on GitHub</a>
-
           <h1 id="project_title">Obelisk.js</h1>
           <h2 id="project_tagline">JavaScript Engine to Build Pixel Isometric Element with HTML5 Canvas</h2>
 
@@ -124,6 +122,6 @@
             } catch(err) {}
           </script>
 
-    <a href="https://github.com/nosir/obelisk.js"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png" alt="Fork me on GitHub"></a>
+    <a href="https://github.com/nosir/obelisk.js"><img style="position: absolute; top: 0; left: 0; border: 0;margin: 0;padding: 0;width: 149px;height: 149px;box-shadow: none;-webkit-box-shadow: none;-moz-box-shadow: none;-o-box-shadow: none;-ms-box-shadow: none;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png" alt="Fork me on GitHub"></a>
   </body>
 </html>
