--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 <h2>
 <a name="showcase" class="anchor" href="#showcase"><span class="octicon octicon-link"></span></a>Showcase</h2>
 
-<p>Cube Generator: <a href="http://jsdo.it/nosir/ttQD">http://jsdo.it/rison/ttQD</a></p>
+<p>Cube Generator: <a href="http://jsdo.it/nosir/ttQD">http://jsdo.it/nosir/ttQD</a></p>
+<p>GIF Animation Render: <a href="http://jsdo.it/nosir/nabY">http://jsdo.it/nosir/nabY</a></p>
 
 <h2>
 <a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting started</h2>
