--- a/demo/primary/pyramid/index.html
+++ b/demo/primary/pyramid/index.html
@@ -12,7 +12,7 @@
 <body style="margin: 0;">
 <canvas id="canvas-demo" width="1000" height="600" style="background-color: #F4F4F4;"></canvas>
 <script src="../vendor/jquery-1.9.1.min.js"></script>
-<script src="../../build/obelisk.js"></script>
+<script src="../../../build/obelisk.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
