Refactor the project with CommonJS module style

--- a/demo/advanced/input-text-rendering/index.html
+++ b/demo/advanced/input-text-rendering/index.html
@@ -59,7 +59,7 @@
 <script src="../../vendor/dat.gui.min.js" type="text/javascript"></script>
 <script src="../../vendor/jquery-1.9.1.min.js" type="text/javascript"></script>
 
-<script src="../../../build/obelisk.js"></script>
+<script src="../../../build/obelisk.min.js"></script>
 <div class="bar">
     <label for="ipt">Enter something here:</label>
     <input id="ipt" value="codepen.io" type="text" placeholder="" maxlength="25">
